Repaired margin to display button in the pagination header aligned.

--- a/base-component/webroot/screen/webroot/css/webroot-layout.css
+++ b/base-component/webroot/screen/webroot/css/webroot-layout.css
@@ -127,7 +127,7 @@ input[type="text"].ui-autocomplete-input { width: auto; }
 .navbar-right.btn { margin-right: -6px; margin-left: 10px; }
 .navbar-right.btn-group { margin-right: -6px; margin-left: 0px; }
 
-nav.form-list-nav .pagination { margin: 4px 0 0 0; }
+nav.form-list-nav .pagination { margin: 6px 0 0 0; }
 nav.form-list-nav>form.form-inline { display: inline-block; margin: 2px 6px 0 0; float: left; }
 nav.form-list-nav>.btn { display: inline-block; margin: 6px 6px 0 6px; float: left; }
 nav.form-list-nav>span.select2-container { float: left; margin: 6px 0 6px 0; min-width: 100px; max-width: 160px; }
